Småjusteringar samt några figurer

--- a/integrationen_i_dalarna.Rmd
+++ b/integrationen_i_dalarna.Rmd
@@ -544,6 +544,8 @@ De med en kortare vistelsetid i Sverige på 0–2 år var de som flyttade i stö
 
 *Vad finns det för information att få kring demokrati och tillit?*
 
+*Kolla SCBs Integrations-del i statistikdatabasen*
+
 *Valdeltagande*
 
 *SoM-institutets tillitsmätningar*
